# CodeViz

./: .gitignore  .vizcode_history.json  BIOS_VIZ_WORKLOG.md  CLAUDE.md  _debug_import_server.py  _debug_run_server.py  analyze_bios.py  analyze_viz.py  detector.py  i18n.js  launch.bat  launcher.html  memory.md  server.py  themes.css  vizcode.py
.claude/: AGENTS.md  BRAIN.md  README.md  (+4 more)
testproject/testproject/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  go.mod  main.go  package.json  tsconfig.json
testproject/testproject/backend/api/: routes_device.py  server.py
testproject/testproject/config/: app.yaml
testproject/testproject/database/: schema.sql
testproject/testproject/frontend/api/: client.ts
testproject/testproject/frontend/components/: JobDashboard.tsx
testproject/testproject/frontend/styles/: dashboard.css
testproject/testproject/frontend/utils/: format.js
testproject/testproject/infra/: main.tf
testproject/testproject/proto/: jobs.proto
testproject/testproject/scripts/: deploy.sh  migrate.rb
testproject/testproject/server/: server.go
testproject/testproject/server/middleware/: middleware.go
testproject/testproject/shaders/: particle.frag  particle.vert
testproject/testproject/src/: processor.rs
testproject/testproject/src/api/: handler.py
testproject/testproject/src/core/: engine.py  pipeline.py  scheduler.py
testproject/testproject/src/utils/: cache.py  logger.py  metrics.py
testproject/testproject/store/: store.go
testproject/testproject/tests/: test_engine.py
testproject/testproject/worker/: pool.go
(+31 files in other folders)
