[package]
name = "testproject-processor"
version = "0.1.0"
edition = "2021"
authors = ["Test Author <test@example.com>"]
description = "High-performance data processor"

[[bin]]
name = "processor"
path = "src/main.rs"

[lib]
name = "processor"
path = "src/lib.rs"

[dependencies]
tokio        = { version = "1.36", features = ["full"] }
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
uuid         = { version = "1.7", features = ["v4", "serde"] }
chrono       = { version = "0.4", features = ["serde"] }
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow       = "1.0"
thiserror    = "1.0"
axum         = { version = "0.7", features = ["json"] }
tower        = "0.4"
tower-http   = { version = "0.5", features = ["trace", "cors"] }

[dev-dependencies]
tokio-test   = "0.4"
mockall      = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
